log/build_2021-06-01_15-52-37/gazebo_plugin_sim/stdout_stderr.log
[35m[1mScanning dependencies of target platform_plugin_test[0m
[ 50%] [32mBuilding CXX object CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘virtual void gazebo_plugin_sim::PlatformPluginTest::Load(gazebo::physics::ModelPtr, sdf::v9::ElementPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:105:26: error: ‘using SharedPtr = class std::shared_ptr<rclcpp::executors::MultiThreadedExecutor>’ {aka ‘class std::shared_ptr<rclcpp::executors::MultiThreadedExecutor>’} has no member named ‘add_node’
  105 |     impl_->node_executor.add_node(impl_->ros_node_);
      |                          ^~~~~~~~
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
